fixed it, needed no wrap

--- a/15unit/css/styles.css
+++ b/15unit/css/styles.css
@@ -514,6 +514,10 @@ html {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
+  .main__threeArticlesPriceFlex {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 @media only screen and (min-width: 58.75rem) {
