--- a/15unit/scss/_medium.scss
+++ b/15unit/scss/_medium.scss
@@ -19,6 +19,6 @@
     padding: 1rem;
     flex-wrap: nowrap; //no wrap on medium screens
 }
-// .main__threeArticlesPriceFlex {
-//     flex-wrap: nowrap;
-// }
+.main__threeArticlesPriceFlex {
+    flex-wrap: nowrap;
+}
